@@ -147,7 +147,7 @@
 		<title>Feedback</title>
 		<para>To report a bug or make a suggestion regarding the <application>&app;</application> application or
 		this manual, go to the
-		<ulink url="http://savannah.nongnu.org/projects/gchempaint" type="html"><application>&app;</application> home page</ulink>. 
+		<ulink url="http://savannah.nongnu.org/projects/gchemutils" type="html"><application>&app;</application> home page</ulink>. 
       </para>
 <!-- Translators may also add here feedback address for translations -->
 	 </legalnotice>
