@@ -1,5 +1,13 @@
 ##Text encoding: utf-8
 
+2014-11-04  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/application.cc: clean Tools code from.
+	* libs/gcp/tools.cc: ditto.
+	* libs/gcp/tools.h: ditto.
+	* plugins/paint/arrows/looptool.cc: some work on Drag().
+	* plugins/paint/arrows/looptool.h: ditto.
+	* ui/paint/tools.ui: clean Tools code from.
+
 2014-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gccv/arc.cc: fix bounds.
 	* libs/gcp/widgetdata.cc: fix an object bounds evaluation issue.
